# libwsv5

./: .editorconfig  .gitignore  API_REFERENCE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  GETTING_STARTED.md  LICENSE  Makefile  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  library.c  library.h  libwsv5.c  libwsv5.h  libwsv5.pc.in
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build-macos.yml  package-release.yml
doc/html/: annotated.html  annotated_dup.js  classes.html  examples.html  examples.js  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js
doc/html/d0/da8/: library_8c__incl.map  library_8c__incl.md5
doc/html/d2/d1f/: structobsws__response__t.html  structobsws__response__t.js
doc/html/d2/db1/: structobsws__config__t__coll__graph.map  structobsws__config__t__coll__graph.md5
doc/html/d3/d62/: structobsws__connection__coll__graph.map  structobsws__connection__coll__graph.md5
doc/html/d3/dec/: Hiding-example.html
doc/html/d4/d48/: Getting-example.html
doc/html/d4/d4d/: Switching-example.html
doc/html/d4/d7a/: Logging-example.html
doc/html/d4/d81/: Usage-example.html
doc/html/d5/d27/: library_8c.html  library_8c.js  library_8c_a046a86e7ba13a054663021594755d54b_cgraph.map  library_8c_a046a86e7ba13a054663021594755d54b_cgraph.md5  library_8c_a046a86e7ba13a054663021594755d54b_icgraph.map  library_8c_a046a86e7ba13a054663021594755d54b_icgraph.md5  library_8c_a0672da971c7e38224df11c34ef612f02_cgraph.map  library_8c_a0672da971c7e38224df11c34ef612f02_cgraph.md5  library_8c_a0672da971c7e38224df11c34ef612f02_icgraph.map  library_8c_a0672da971c7e38224df11c34ef612f02_icgraph.md5  library_8c_a1d8529feb33753ebb45d896c4c125642_icgraph.map  library_8c_a1d8529feb33753ebb45d896c4c125642_icgraph.md5  library_8c_a27739efcea1287611c82ff3e8c88d7b7_cgraph.map  library_8c_a27739efcea1287611c82ff3e8c88d7b7_cgraph.md5  library_8c_a27739efcea1287611c82ff3e8c88d7b7_icgraph.map  library_8c_a27739efcea1287611c82ff3e8c88d7b7_icgraph.md5  library_8c_a2cfe9b46f435aa7986b5e772b99c464e_cgraph.map  library_8c_a2cfe9b46f435aa7986b5e772b99c464e_cgraph.md5  library_8c_a2f13308e49322d01e479cbe14da7b575_cgraph.map  library_8c_a2f13308e49322d01e479cbe14da7b575_cgraph.md5  library_8c_a2f13308e49322d01e479cbe14da7b575_icgraph.map  library_8c_a2f13308e49322d01e479cbe14da7b575_icgraph.md5  library_8c_a30001811f4cf8501e006ca46bcb8b329_cgraph.map  library_8c_a30001811f4cf8501e006ca46bcb8b329_cgraph.md5  library_8c_a3682ffd7f6175dbc796f5750172c99bf_icgraph.map  library_8c_a3682ffd7f6175dbc796f5750172c99bf_icgraph.md5  library_8c_a53067e61dc0ddcf1134d46b275d7ce6b_icgraph.map  library_8c_a53067e61dc0ddcf1134d46b275d7ce6b_icgraph.md5  library_8c_a69f8fcc1732533a2ebe573ac65effa04_icgraph.map  library_8c_a69f8fcc1732533a2ebe573ac65effa04_icgraph.md5  library_8c_a6f7f5f47389b537c9dce9f1b328b7f06_icgraph.map  library_8c_a6f7f5f47389b537c9dce9f1b328b7f06_icgraph.md5  library_8c_a700c8a9baa87a3827b399776e811f328_icgraph.map  library_8c_a700c8a9baa87a3827b399776e811f328_icgraph.md5  library_8c_a7cb91bbce42b458f267f79b9a7b293bf_cgraph.md5  library_8c_a7ed7225961f0989acb31ebbd9c099626_cgraph.map  library_8c_a8643e2027afb1907122ce4d3bfe65c6e_cgraph.map  library_8c_a8643e2027afb1907122ce4d3bfe65c6e_cgraph.md5  library_8c_a885f22656ee8ca3170a50df0e0d85a4d_icgraph.map  library_8c_a885f22656ee8ca3170a50df0e0d85a4d_icgraph.md5  (+36 more)
doc/html/d5/d88/: structobsws__connection.html  structobsws__connection.js
doc/html/d6/d5c/: structobsws__stats__t.html  structobsws__stats__t.js
doc/html/d6/df8/: Disabling-example.html
doc/html/d7/d32/: Displaying-example.html
doc/html/d7/dea/: Parsing-example.html
doc/html/d9/d34/: Using-example.html
doc/html/da/d45/: structpending__request.html  structpending__request.js
doc/html/db/d97/: library_8h__dep__incl.map  library_8h__dep__incl.md5
doc/html/db/dd9/: structpending__request__coll__graph.map  structpending__request__coll__graph.md5
doc/html/dc/de7/: structobsws__config__t.html  structobsws__config__t.js
doc/html/dd/d08/: library_8h.html  library_8h.js  library_8h_a2cfe9b46f435aa7986b5e772b99c464e_cgraph.map  library_8h_a2cfe9b46f435aa7986b5e772b99c464e_cgraph.md5  library_8h_a30001811f4cf8501e006ca46bcb8b329_cgraph.map  library_8h_a30001811f4cf8501e006ca46bcb8b329_cgraph.md5  library_8h_a53067e61dc0ddcf1134d46b275d7ce6b_icgraph.map  library_8h_a53067e61dc0ddcf1134d46b275d7ce6b_icgraph.md5  library_8h_a7cb91bbce42b458f267f79b9a7b293bf_cgraph.map  library_8h_a7ed7225961f0989acb31ebbd9c099626_cgraph.md5  library_8h_a86a35ee2d7aef7a0569b4111bd663d22_cgraph.map  library_8h_a86a35ee2d7aef7a0569b4111bd663d22_cgraph.md5  library_8h_a91bd5ceb5878431131513cb4624e935a_cgraph.map  library_8h_aa8389ba6731e01a9426bd921180b7195_cgraph.map  library_8h_aa8389ba6731e01a9426bd921180b7195_cgraph.md5  library_8h_aff3d6c035330741df84552800c0d0124_icgraph.map  library_8h_aff3d6c035330741df84552800c0d0124_icgraph.md5  library_8h_source.html
doc/html/search/: all_0.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_8.js  (+5 more)
doc/latex/: annotated.tex  refman.aux  refman.idx  refman.out  refman.tex  refman.toc
doc/latex/d3/dec/: Hiding-example.tex
docs/: DEPLOYMENT_SUMMARY.md  DISTRIBUTION_GUIDE.md  INSTALL_GUIDE.md  PACKAGING.md  PRODUCTION_CHECKLIST.md  README.md
scripts/: build-packages.sh  install-local.sh  quick-install.sh
tests/: comprehensive_test  comprehensive_test.c  test.c
(+70 files in other folders)
